# semanticsearch

./: .gitignore  DEPLOYMENT.md  README.md  add_dbs.py  app.py  config.ini.template  courses_to_embeddings.py  create_courses_table.py  csvcleaner.ipynb  database.py  egmodel.py  embeddings_gen.py  make_dbs.py  pyproject.toml  querying.py
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.svelte  SchoolSelector.svelte  SearchBar.svelte  SearchResults.svelte  app.css
client/src/data/: schools.js
client/src/lib/stores/: searchStore.js
client/src/utils/: searchService.js
coursedata/ncsu/: NCSU_courses.csv  scraper.py
coursedata/unc/: UNC_courses.csv  scraper.py
coursesCSVs/: ASU_courses.csv  UIUC_courses.csv
scripts/: bootstrap.sh
static/: app.js  styles.css
templates/: index.html
